--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,59 +1,14 @@
-<style>
-/*Grid Display Pagination Styling*/
-.row-centered {
-  text-align: center;
-}
-
-.col-centered {
-  display: inline-block;
-}
-
-pagination .pagination > .active > a, .pagination > .active > a:focus, .pagination > .active > a:hover, .pagination > .active > span, .pagination > .active > span:focus, .pagination > .active > span:hover{
-  background-color: #FFC221;
-  border-color: #FFC221;
-  color: #000;
-
-}
-
-pagination .pagination > li > a, .pagination > li > span {
-  color: #000;
-}
-
-pagination .pagination > li > a:focus, .pagination > li > a:hover, .pagination > li > span:focus, .pagination > li > span:hover{
-  color: #000;
-}
-
-#advanced_search_buttom {
-  cursor: pointer;
-}
-
-#reset_default {
-    display: inline-block;
-    background: #0088D4;
-    color: white;
-    width: 40px;
-    height: 40px;
-    border-radius: 50px;
-    padding: 10px;
-    line-height: 20px;
-    font-size: 32px;
-    cursor: pointer;
-}
-#reset_default_term {
-    font-size: 21px;
-    margin-right: 13px;
-    color: #0088D4;
-    line-height: 20px;
-    cursor: pointer;
-}
-/*End of Grid Display Pagination Styling*/
-</style>
-
 <script>
 $(document).ready(function(){
     $("#advanced_search_block").hide();
+    $("#column_filter_block").hide();
+
     $("#advanced_search_buttom").click(function(){
         $("#advanced_search_block").slideToggle( "slow" );
+    });
+
+    $("#column_filter_buttom").click(function(){
+        $("#column_filter_block").slideToggle( "slow" );
     });
 });
 </script>
@@ -61,7 +16,7 @@ $(document).ready(function(){
 <div style="width: 100%; height: 60px; background: #DCE4EA; padding: 10px">
   <div class="container">
     <div class="row">
-      <h2 style="color: #0088D4; margin: 0;">List View</h2>
+      <h2 style="color: #0088D4; margin: 0;">List View Columns</h2>
     </div>
   </div>
 </div>
@@ -93,7 +48,7 @@ $(document).ready(function(){
    <span id="advanced_search_buttom"  style="color: #0088D4; font-size: 20px;"><span style="color:#DFDFDF; font-size: 15px; margin-right: 5px;"><i class="fa fa-chevron-down" ></i></span >Additional Options</span>
   </div>
 
-  <div id="advanced_search_block" class="row" style="padding-top: 20px; border-top:2px solid #DFDFDF;">
+  <div id="advanced_search_block" class="row">
       <div class="form-group col-sm-2">
         <select class="my_selected form-control" ng-model="maxRateOption" ng-change="maxRateChanged()">
           <option selected="selected">{{maxRateTerm}}</option>
@@ -179,13 +134,53 @@ $(document).ready(function(){
 
 <!-- Table Column Filteration Block -->
 <div class="container">
-</div>
+  <div class="row" >
+   <span id="column_filter_buttom"  style="color: #0088D4; font-size: 20px;"><span style="color:#DFDFDF; font-size: 15px; margin-right: 5px;"><i class="fa fa-chevron-down" ></i></span >Columns Filtration Options</span>
+  </div> <!-- End of row div -->
+</div> <!-- End of container div -->
+
+
+<div id="column_filter_block" class="container">
+  <div class="row">
+     <div class="col-sm-3">
+        <div class="filter_cat_title"> General Info</div>
+        <hr>
+        <ul>
+          <li style="list-style-type: none;margin:15px 5px;" ng-repeat="flag in ids_flags" ><input type="checkbox" ng-model="flag.flag"> {{flag.term}} </li>
+        </ul>
+     </div>
+     <div class="col-sm-3">
+        <div class="filter_cat_title">Address</div>
+        <hr>
+        <ul>
+          <li style="list-style-type: none;margin:15px 5px;" ng-repeat="flag in address_flags" ><input type="checkbox" ng-model="flag.flag"> {{flag.term}} </li>
+        </ul>
+     </div>
+      <div class="col-sm-3">
+        <div class="filter_cat_title">Loan Info</div>
+        <hr>
+        <ul>
+          <li style="list-style-type: none;margin:15px 5px;" ng-repeat="flag in loan_flags" ><input type="checkbox" ng-model="flag.flag"> {{flag.term}} </li>
+        </ul>
+     </div>
+     <div class="col-sm-3">
+        <div class="filter_cat_title">Others Info</div>
+        <hr>
+        <ul>
+          <li style="list-style-type: none;margin:15px 5px;" ng-repeat="flag in other_flags" ><input type="checkbox" ng-model="flag.flag"> {{flag.term}} </li>
+        </ul>
+     </div>
+  </div> <!-- End of row div -->
+</div> <!-- End of container div -->
+
 
 <!--  End of  Table Column Filteration Block -->
-<div>
+
+
+
 <div >
   <ul>
-    <li style="list-style-type: none; float: left; margin:15px 5px;" ng-repeat="flag in display_flags" >{{flag.term}} <input type="checkbox" ng-model="flag.flag"></li>
+    <li style="list-style-type: none;margin:15px 5px;" ng-repeat="flag in display_flags" ><input type="checkbox" ng-model="flag.flag"> {{flag.term}} </li>
   </ul>
 </div>
 
@@ -208,21 +203,29 @@ $(document).ready(function(){
 
   <table  class="table table-striped table-bordered table-hover">
     <tr>
-      <th  style="text-align: center;" ng-repeat="flag in display_flags" ng-show="flag.flag" ng-click="selectSortFunction(flag.key)">
+      <th  style="text-align: center;" ng-repeat="flag in ids_flags" ng-show="flag.flag" ng-click="selectSortFunction(flag.key)">
          {{flag.term}}
       </th>
-    </tr>
+      <th  style="text-align: center;" ng-repeat="flag in address_flags" ng-show="flag.flag" ng-click="selectSortFunction(flag.key)">
+         {{flag.term}}
+      </th>
+      <th  style="text-align: center;" ng-repeat="flag in loan_flags" ng-show="flag.flag" ng-click="selectSortFunction(flag.key)">
+         {{flag.term}}
+      </th>
+      <th  style="text-align: center;" ng-repeat="flag in other_flags" ng-show="flag.flag" ng-click="selectSortFunction(flag.key)">
+         {{flag.term}}
+      </th>
     <tr ng-repeat="data in table_data | filter: query | orderBy:sortType:sortReverse | loanRange:minLoan:maxLoan | maxRateFilter: maxRate | offset: currentPage*itemsPerPage | limitTo: itemsPerPage">
-      <td ng-show="display_flags[0].flag">{{data.id}}</td>
-      <td ng-show="display_flags[1].flag">{{data.date}}<td>
-      <td ng-show="display_flags[2].flag">{{data.apn}}</td>
-      <td ng-show="display_flags[3].flag">{{data.address}}</td>
-      <td ng-show="display_flags[4].flag">{{data.city}}</td>
-      <td ng-show="display_flags[5].flag">{{data.max_rate}}</td>
-      <td ng-show="display_flags[6].flag">{{data.interest_rate}}</td>
-      <td ng-show="display_flags[7].flag">{{data.loan_amount}}</td>
-      <td ng-show="display_flags[8].flag">{{data.loan_term}}</td>
-      <td ng-show="display_flags[9].flag">{{data.appraisal_value}}</td>  
+      <td ng-show="ids_flags[0].flag">{{data.id}}</td>
+      <td ng-show="ids_flags[1].flag">{{data.date}}<td>
+      <td ng-show="ids_flags[2].flag">{{data.apn}}</td>
+      <td ng-show="address_flags[0].flag">{{data.address}}</td>
+      <td ng-show="address_flags[1].flag">{{data.city}}</td>
+      <td ng-show="loan_flags[0].flag">{{data.max_rate}}</td>
+      <td ng-show="loan_flags[1].flag">{{data.interest_rate}}</td>
+      <td ng-show="loan_flags[2].flag">{{data.loan_amount}}</td>
+      <td ng-show="other_flags[0].flag">{{data.loan_term}}</td>
+      <td ng-show="other_flags[1].flag">{{data.appraisal_value}}</td>  
     </tr>
   </table>
   </div>
