--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <script src="http://localhost:3000/ng-datatable/js/angular-datatables.min.js"></script>
+  <link rel="stylesheet" href="http://localhost:3000/ng-datatable/css/angular-datatables.min.css" 
   <%= csrf_meta_tags %>
 </head>
 <body ng-app="myApp" ng-controller="myCtrl">
