--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -252,6 +252,34 @@ $(document).ready(function(){
 <!--    End Of Pagination Block -->
 </div>
 <!--  End of Table Block -->
+<div style="height: 40px; width:100%; border: 2px solid blue;">
+  <hr>
+</div>
 
-
+<table datatable="" class="row-border hover">
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>First name</th>
+        <th>Last name</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>1</td>
+        <td>Foo</td>
+        <td>Bar</td>
+    </tr>
+    <tr>
+        <td>123</td>
+        <td>Someone</td>
+        <td>Youknow</td>
+    </tr>
+    <tr>
+        <td>987</td>
+        <td>Iamout</td>
+        <td>Ofinspiration</td>
+    </tr>
+    </tbody>
+</table>
 <!-- Pagination Section -->
