--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,8 @@
   <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.11/js/jquery.dataTables.js"></script>
   <!--  Angular-Datatable local files -->
   <script src="ng-datatable/js/angular-datatables.min.js"></script>
+  <script src="ng-datatable/js/dataTables.colReorder.js"></script>
+  <script src="ng-datatable/js/angular-datatables.colreorder.min.js"></script>
  
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
