Show/Hide columns function is finished

--- a/app/views/home/datatable.html.erb
+++ b/app/views/home/datatable.html.erb
@@ -133,28 +133,28 @@
         <div class="filter_cat_title"> General Info</div>
         <hr>
         <ul>
-          <li style="list-style-type: none;margin:15px 5px;" ng-repeat="option in col_general_info_titles.options" ><input type="checkbox" checked data-column-num="{{$index + col_general_info_titles.start }}"> {{option}} </li>
+          <li style="list-style-type: none;margin:15px 5px;" ng-repeat="option in col_general_info_titles.options" ><input class="toggle-visit" type="checkbox" checked data-column-num="{{$index + col_general_info_titles.start }}"> {{option}} </li>
         </ul>
      </div>
      <div class="col-sm-3">
         <div class="filter_cat_title">Address</div>
         <hr>
         <ul>
-          <li style="list-style-type: none;margin:15px 5px;" ng-repeat="option in col_address_titles.options" ><input type="checkbox" checked data-column-num="{{$index + col_address_titles.start }}"> {{option}} </li>
+          <li style="list-style-type: none;margin:15px 5px;" ng-repeat="option in col_address_titles.options" ><input class="toggle-visit"  type="checkbox" checked data-column-num="{{$index + col_address_titles.start }}"> {{option}} </li>
         </ul>
      </div>
       <div class="col-sm-3">
         <div class="filter_cat_title">Loan Info</div>
         <hr>
         <ul>
-          <li style="list-style-type: none;margin:15px 5px;" ng-repeat="option in col_loan_info_titles.options" ><input type="checkbox" checked data-column-num="{{$index + col_loan_info_titles.start }}"> {{option}} </li>
+          <li style="list-style-type: none;margin:15px 5px;" ng-repeat="option in col_loan_info_titles.options" ><input class="toggle-visit"  type="checkbox" checked data-column-num="{{$index + col_loan_info_titles.start }}"> {{option}} </li>
         </ul>
      </div>
      <div class="col-sm-3">
         <div class="filter_cat_title">Others Info</div>
         <hr>
         <ul>
-          <li style="list-style-type: none;margin:15px 5px;" ng-repeat="option in col_others_info_titles.options" ><input type="checkbox" checked data-column-num="{{$index + col_others_info_titles.start }}"> {{option}} </li>
+          <li style="list-style-type: none;margin:15px 5px;" ng-repeat="option in col_others_info_titles.options" ><input class="toggle-visit"  type="checkbox" checked data-column-num="{{$index + col_others_info_titles.start }}"> {{option}} </li>
         </ul>
      </div>
   </div> <!-- End of row div -->
