completed partial default function

--- a/app/views/home/datatable.html.erb
+++ b/app/views/home/datatable.html.erb
@@ -18,8 +18,8 @@
           <input id="search" class="form-control" ng-model="query">
         </div> 
         <div class="col-sm-4" style="text-align: right">
-         <span ng-click="reset()">
-            <span id="reset_default_term">Reset To Default</span> <span id="reset_default">X</span>
+         <span id="reset_default_term">
+            <span >Reset To Default</span> <span id="reset_default">X</span>
          </span>
       </div> 
       </div>
