--- a/app/views/home/datatable.html.erb
+++ b/app/views/home/datatable.html.erb
@@ -37,46 +37,10 @@
 
   <div id="advanced_search_block" class="row">
       <div class="form-group col-sm-2">
-        <select class="my_selected form-control" ng-model="maxRateOption" ng-change="maxRateChanged()">
-          <option selected="selected">{{maxRateTerm}}</option>
-          <option value="1">1+</option>
-          <option value="2">2+</option>
-          <option value="3">3+</option>
-          <option value="4">4+</option>
-          <option value="5">5+</option>
-        </select>
+          Minimum Loan Amount: <input class="form-control" id="min-loan-amount" type="text">
       </div>
       <div class="form-group col-sm-2">
-        <select class="my_selected form-control" ng-model="minLoanOption" ng-change="MinLoanChanged()">
-          <option selected="selected">{{minLoanTerm}}</option>
-          <option value="10000">$10,000+</option>
-          <option value="20000">$20,000+</option>
-          <option value="30000">$30,000+</option>
-          <option value="50000">$50,000+</option>
-          <option value="75000">$75,000+</option>
-          <option value="100000">$100,000+</option>
-          <option value="125000">$125,000+</opton>
-          <option value="150000">$150,000+</opton>
-          <option value="175000">$175,000+</opton>
-          <option value="200000">$200,000+</opton>
-          <option value="225000">$225,000+</opton>
-          <option value="250000">$250,000+</opton>
-          <option value="300000">$300,000+</opton>
-          <option value="350000">$350,000+</option>
-          <option value="400000">$400,000+</option>
-          <option value="450000">$450,000+</option>
-          <option value="500000">$500,000+</option>
-          <option value="600000">$600,000+</option>
-          <option value="700000">$700,000+</option>
-          <option value="800000">$800,000+</option>
-          <option value="1000000">$1M+</option>
-          <option value="1250000">$1.25M+</option>
-          <option value="1500000">$1.5M+</option>
-          <option value="1750000">$1.75M+</option>
-          <option value="2000000">$2M+</option>
-          <option value="2500000">$2.5M+</option>
-          <option value="3000000">$3M+</option>
-        </select>
+          Maximum Loan Amount: <input class="form-control" id="max-loan-amount"type="text">
       </div>
 
       <div class="form-group col-sm-2">
@@ -113,7 +77,12 @@
       </div>
 
       <div class="form-group col-sm-2">
-        Date: 
+        Date:<br><br>
+        Beginning Date:<input id="beginning-date" type="text"><br><br>
+        End Date: <input id="ending-date" type="text">
+
+
+
       </div>
   </div> <!-- End of Row Div -->
 </div> <!-- End of Container Div  -->
