Mid coding saving

--- a/app/views/home/datatable.html.erb
+++ b/app/views/home/datatable.html.erb
@@ -78,8 +78,8 @@
 
       <div class="form-group col-sm-2">
         Date:<br><br>
-        Beginning Date:<input id="beginning-date" type="text"><br><br>
-        End Date: <input id="ending-date" type="text">
+        Beginning Date:<input id="min-date" type="text"><br><br>
+        End Date: <input id="max-date" type="text">
 
 
 
