Added placeholder content

--- a/app/views/home/datatable.html.erb
+++ b/app/views/home/datatable.html.erb
@@ -37,10 +37,10 @@
 
   <div id="advanced_search_block" class="row">
       <div class="form-group col-sm-2">
-          {{min_loan_term_title}}: <input class="form-control" id="min-loan-term" type="text">
+        <input class="form-control" id="min-loan-term" type="text" placeholder="{{min_loan_term_title}}">
       </div>
       <div class="form-group col-sm-2">
-          {{max_loan_term_title}}: <input class="form-control" id="max-loan-term"type="text">
+        <input class="form-control" id="max-loan-term"type="text" placeholder="{{max_loan_term_title}}">
       </div>
 
       <div class="form-group col-sm-2">
