Implementing custom filter saving function

--- a/app/views/home/datatable.html.erb
+++ b/app/views/home/datatable.html.erb
@@ -77,13 +77,11 @@
       </div>
 
       <div class="form-group col-sm-2">
-        Date:<br><br>
-        Beginning Date:<input id="min-date" type="text"><br><br>
-        End Date: <input id="max-date" type="text">
-
-
-
-      </div>
+        <input class="form-control" id="min-date" type="text" placeholder="Beginning Date" >
+     </div>
+     <div class="form-group col-sm-2">
+      <input class="form-control" id="max-date" type="text" placeholder="End Date">
+     </div>
   </div> <!-- End of Row Div -->
 </div> <!-- End of Container Div  -->
 <!--  End of Advanced Search Field Block -->
