Added stateload and statesave functions

--- a/app/views/home/datatable.html.erb
+++ b/app/views/home/datatable.html.erb
@@ -77,10 +77,10 @@
       </div>
 
       <div class="form-group col-sm-2">
-        <input class="form-control" id="min-date" type="text" placeholder="Beginning Date" >
+        <input name="min_date" class="form-control" id="min-date" type="text" placeholder="Beginning Date" >
      </div>
      <div class="form-group col-sm-2">
-      <input class="form-control" id="max-date" type="text" placeholder="End Date">
+      <input name="max_date" class="form-control" id="max-date" type="text" placeholder="End Date">
      </div>
   </div> <!-- End of Row Div -->
 </div> <!-- End of Container Div  -->
