Custom search fields state saving feature is completed

--- a/app/views/home/datatable.html.erb
+++ b/app/views/home/datatable.html.erb
@@ -44,7 +44,7 @@
       </div>
 
       <div class="form-group col-sm-2">
-        <select id="loan-amount" class="my_selected form-control"  >
+        <select name="loan-amount" id="loan-amount" class="my_selected form-control"  >
           <option selected="selected">{{loan_amount_title}}</option>
           <option value="10000">$10,000+</option>
           <option value="20000">$20,000+</option>
@@ -77,10 +77,10 @@
       </div>
 
       <div class="form-group col-sm-2">
-        <input name="min_date" class="form-control" id="min-date" type="text" placeholder="Beginning Date" >
+        <input name="min-date" class="form-control" id="min-date" type="text" placeholder="Beginning Date" >
      </div>
      <div class="form-group col-sm-2">
-      <input name="max_date" class="form-control" id="max-date" type="text" placeholder="End Date">
+      <input name="max-date" class="form-control" id="max-date" type="text" placeholder="End Date">
      </div>
   </div> <!-- End of Row Div -->
 </div> <!-- End of Container Div  -->
