Reposition search field box and hide default field with Jquery

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -3,6 +3,10 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+#example {
+    display: block;
+}
+
 /*Grid Display Pagination Styling*/
 .row-centered {
   text-align: center;
